fix the long email address in Delete modal and button spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -372,6 +372,10 @@ label, legend.dob{
 .modal {
   text-align: center;
 }
+.modal-content {
+	display: inline-block;
+}
+
 @media screen and (min-width: 480px) { 
   .modal:before {
     display: inline-block;
